--- a/code.css
+++ b/code.css
@@ -16,6 +16,6 @@ Body {
   font-weight: bold;
   font-variant: small-caps;
   background: #000000;
-  color: white;
+  color: green;
   text-align: center;}
 
